--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи - каталог</title>
-    <link href="https://fonts.googleapis.com/css?family=Oswald&amp;subset=cyrillic" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
     <header class="header">
-        <a class="header__logo">
+        <a class="header__logo" href="index.html">
             <img class="header__logo-image" src="img/logo-mobile.svg" width="200" height="50" alt="Cat Energy">
         </a>
         <nav class="navigation">
