--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи - каталог</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="/css/normalize.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
 </head>
 
 <body>
