--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,25 +11,27 @@
 
 <body>
     <header class="header">
-        <a class="header__logo" href="index.html">
-            <img class="header__logo-image" src="img/logo-mobile.svg" width="200" height="50" alt="Cat Energy">
+        <div class="header__wrapper">
+        <a class="header__logo">
+          <img class="header__logo-image" src="img/logo-mobile.svg" width="200" height="50" alt="Cat Energy">
         </a>
-        <nav class="navigation">
-            <button class="navigation__toggle" type="button">
-              <img class="navigation__image" src="img/icon-mobile-menu.svg" width="24" height="18" alt="Открыть меню">
-            </button>
-            <ul class="navigation__list site-list">
-                <li class="site-list__item ">
-                    <a href="index.html">Главная</a>
-                </li>
-                <li class="site-list__item site-list__item--active">
-                    <a>Каталог продукции</a>
-                </li>
-                <li class="site-list__item">
-                    <a href="form.html">Подбор программы</a>
-                </li>
-            </ul>
+        <nav class="navigation navigation--nojs">
+          <button class="navigation__toggle" type="button">
+            <img class="navigation__image" src="img/icon-mobile-menu.svg" width="24" height="18" alt="Открыть меню">
+          </button>
+          <ul class="navigation__list site-list">
+            <li class="site-list__item">
+              <a class="site-list__link" href="index.html">Главная</a>
+            </li>
+            <li class="site-list__item site-list__item--active">
+              <a class="site-list__link">Каталог продукции</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="form.html">Подбор программы</a>
+            </li>
+          </ul>
         </nav>
+        </div>
     </header>
     <main class="main">
         <section class="catalog">
@@ -135,17 +137,20 @@
             <div class="gift__wrapper">
                 <a class="gift__link" href="#">
                     <h2 class="visually-hidden">Получи подарок</h2>
-                    <img src="img/icon-gift.svg" width="55" height="60" alt="Подарок">
+                    <img class="gift__img" src="img/icon-gift.svg" width="55" height="60" alt="Подарок">
                     <p class="gift__text">Закажите все и получите чехол для кота в подарок!</p>
                 </a>
             </div>
         </section>
     </main>
     <section class="contacts">
+        <div class="contacts__wrapper">
         <h2 class="contacts__title">Приглашаем к сотрудничеству диллеров!</h2>
         <p class="contacts__text">ул.Большая Конюшенская , д.19/8 Санкт-Петербург</p>
+        </div>
+        <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1555329724939!5m2!1sru!2sru" width="320" height="360" frameborder="0" style="border:0" allowfullscreen></iframe>-->
         <img class="contacts__image" src="img/bg-map-mobile@1x.png" width="320" height="360" alt="Карта">
-    </section>
+      </section>
     <footer class="footer">
         <div class="footer__wrapper">
             <a class="footer__logo">
