--- a/source/index.html
+++ b/source/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <header class="header">
+    <div class="header__wrapper">
     <a class="header__logo">
       <img class="header__logo-image" src="img/logo-mobile.svg" width="200" height="50" alt="Cat Energy">
     </a>
@@ -30,6 +31,7 @@
         </li>
       </ul>
     </nav>
+    </div>
   </header>
   <main class="main">
     <section class="intro">
@@ -136,19 +138,23 @@
         <small class="example__text">
           Затраты на питание: 15000руб.
         </small>
+      </div>
         <div class="slider">
+          <div class="slider__wrapper">
           <img class="slider__image" src="img/before-mobile@1x.png" width="311" height="232" alt="Кот до">
           <div class="slider__toggles">
             <button class="slider__toggle" type="button">Было</button>
             <button class="slider__toggle" type="button">Стало</button>
           </div>
         </div>
-      </div>
+        </div>
     </section>
   </main>
   <section class="contacts">
+    <div class="contacts__wrapper">
     <h2 class="contacts__title">Приглашаем к сотрудничеству диллеров!</h2>
     <p class="contacts__text">ул.Большая Конюшенская , д.19/8 Санкт-Петербург</p>
+    </div>
     <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1555329724939!5m2!1sru!2sru" width="320" height="360" frameborder="0" style="border:0" allowfullscreen></iframe>-->
     <img class="contacts__image" src="img/bg-map-mobile@1x.png" width="320" height="360" alt="Карта">
   </section>
